Add oslo test module
This is the wrapper around testutils to simplify work around
writting unit tests.

--- a/openstack-common.conf
+++ b/openstack-common.conf
@@ -6,6 +6,7 @@ module=config
 module=gettextutils
 module=importutils
 module=log
+module=test
 
 # The base module to hold the copy of openstack.common
 base=rally
