--- a/openstack-common.conf
+++ b/openstack-common.conf
@@ -7,6 +7,7 @@ module=gettextutils
 module=importutils
 module=log
 module=test
+module=fixture
 
 # The base module to hold the copy of openstack.common
 base=rally
