--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,13 @@
 Babel>=0.9.6
+eventlet>=0.9.17
 netaddr>=0.7.6
 iso8601>=0.1.4
-oslo.config
 paramiko>=1.8.0
 pbr>=0.5.21,<1.0
 psutil
+SQLAlchemy>=0.7.8,<0.7.99
 sh
 six
+
+-f http://tarballs.openstack.org/oslo.config/oslo.config-1.2.0a3.tar.gz#egg=oslo.config-1.2.0a3
+oslo.config>=1.2.0a3
