--- a/tox.ini
+++ b/tox.ini
@@ -25,7 +25,7 @@ commands = python setup.py testr --coverage --testr-args='{posargs}'
 downloadcache = ~/cache/pip
 
 [flake8]
-ignore = H302
+ignore = H302,E126
 show-source = true
 builtins = _
 exclude=.venv,.git,.tox,dist,doc,*lib/python*,*egg,tools
