Init benchmark framework
We add rally.benchmark module that contains Tester.
This is base of our benchmark framework. It allows us to easy write
test scenarios that could call any test N times simuntaneously and collect results

Add rally.utils stdout captures that allows us to caputre stdout and stderr in easy
way using "with" expression.

Add test for our benchmark base and rally.utils

--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ psutil
 SQLAlchemy>=0.7.8,<0.7.99
 sh
 six
+pytest
 
 -f http://tarballs.openstack.org/oslo.config/oslo.config-1.2.0a3.tar.gz#egg=oslo.config-1.2.0a3
 oslo.config>=1.2.0a3
