Adding cleanup for all test runner calls

--- a/requirements.txt
+++ b/requirements.txt
@@ -10,5 +10,7 @@ sh
 six
 pytest
 
+-e git+https://github.com/simpleranchero/fuel-ostf-tests#egg=fuel-ostf-tests
+
 -f http://tarballs.openstack.org/oslo.config/oslo.config-1.2.0a3.tar.gz#egg=oslo.config-1.2.0a3
 oslo.config>=1.2.0a3
