Force tox version to 1.6
Newer version of tox was published, now it works with the same speed
as run_tests.sh

--- a/tox.ini
+++ b/tox.ini
@@ -1,4 +1,6 @@
 [tox]
+minversion = 1.6
+skipsdist = True
 envlist = py26,py27,pep8
 
 [testenv]
@@ -8,6 +10,8 @@ setenv = VIRTUAL_ENV={envdir}
          LC_ALL=C
 deps = -r{toxinidir}/requirements.txt
        -r{toxinidir}/test-requirements.txt
+install_command = pip install -U {opts} {packages}
+usedevelop = True
 commands = python setup.py testr --testr-args='{posargs}'
 distribute = false
 
