--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,15 @@
 Babel>=0.9.6
 eventlet>=0.9.17
-netaddr>=0.7.6
 iso8601>=0.1.4
+jsonschema>=2.0.0
+netaddr>=0.7.6
 paramiko>=1.8.0
 pbr>=0.5.21,<1.0
 psutil
+pytest
 SQLAlchemy>=0.7.8,<0.7.99
 sh
 six
-pytest
 
 -e git+https://github.com/simpleranchero/fuel-ostf-tests#egg=fuel-ostf-tests
 
