Fixed incorrect timeout tests
In this tests string "Timeout" was searched in wrong place.

Also test functions was renamed, and now we run only tests
we need, instead of all tests (see argument -k for pytest).

Also fixed some typos in docstrings and reduced sleep values.

Blueprint test-engine-utils

Change-Id: Ib89f6071fc5d3091ad0c0134a6009f366796cfa3

--- a/tox.ini
+++ b/tox.ini
@@ -12,7 +12,7 @@ deps = -r{toxinidir}/requirements.txt
        -r{toxinidir}/test-requirements.txt
 install_command = pip install -U {opts} {packages}
 usedevelop = True
-commands = python setup.py testr --testr-args='{posargs}'
+commands = python setup.py testr --slowest --testr-args='{posargs}'
 distribute = false
 
 [testenv:pep8]
