Added cli scripts to package config
Created 2 new scripts for entrypoints:
openstack-rally
openstack-rally-manage

Change-Id: I0f4851f867211f27a52392f99c2cb0af2139f752

--- a/setup.cfg
+++ b/setup.cfg
@@ -21,6 +21,11 @@ classifier =
 packages =
     rally
 
+[entry_points]
+console_scripts =
+    openstack-rally = rally.cmd.main:main
+    openstack-rally-manage = rally.cmd.manage:main
+
 [global]
 setup-hooks =
     pbr.hooks.setup_hook
