Rally logging: test engine
This patch provides the Rally test engine component with logging facilities.

Blueprint logging

Change-Id: I278990a831d17d5ae2f1b103ef3c17480a5fc80b

--- a/tox.ini
+++ b/tox.ini
@@ -29,7 +29,7 @@ commands = python setup.py testr --coverage --testr-args='{posargs}'
 downloadcache = ~/cache/pip
 
 [flake8]
-ignore = E126
+ignore = E126,H703
 show-source = true
 builtins = _
 exclude=.venv,.git,.tox,dist,doc,*lib/python*,*egg,tools
