--- a/setup.cfg
+++ b/setup.cfg
@@ -1,7 +1,7 @@
 [metadata]
 name = rally
 version = 0.0.1
-summary = OpenStack Benchmark System
+summary = Benchmark System for OpenStack
 description-file =
     README.rst
 author = OpenStack
