Use hacking import_exceptions for gettextutils._
Instead of using # noqa every time gettextutils._ is used, add an
exception in tox.ini

Change-Id: I0eb74a162568bf4f320682402e2dc63feadf675e

--- a/tox.ini
+++ b/tox.ini
@@ -33,3 +33,6 @@ ignore = E126,H703
 show-source = true
 builtins = _
 exclude=.venv,.git,.tox,dist,doc,*lib/python*,*egg,tools
+
+[hacking]
+import_exceptions = openstack.common.gettextutils._
