--- a/setup.cfg
+++ b/setup.cfg
@@ -32,3 +32,8 @@ console_scripts =
 [global]
 setup-hooks =
     pbr.hooks.setup_hook
+
+[build_sphinx]
+all_files = 1
+build-dir = doc/build
+source-dir = doc/source
