Deprecate openstack- console scripts, introduce rally, rally-manage
Change-Id: I9edb34a15e26f22a5576ad2c911415950ff17e42
Trello: https://trello.com/c/BpplZmWS

--- a/setup.cfg
+++ b/setup.cfg
@@ -23,8 +23,11 @@ packages =
 
 [entry_points]
 console_scripts =
-    openstack-rally = rally.cmd.main:main
-    openstack-rally-manage = rally.cmd.manage:main
+    rally = rally.cmd.main:main
+    rally-manage = rally.cmd.manage:main
+    openstack-rally = rally.cmd.main:deprecated
+    openstack-rally-manage = rally.cmd.main:deprecated
+
 
 [global]
 setup-hooks =
