--- a/setup.cfg
+++ b/setup.cfg
@@ -24,10 +24,10 @@ packages =
 [entry_points]
 console_scripts =
     rally = rally.cmd.main:main
+    rally-api = rally.cmd.api:main
     rally-manage = rally.cmd.manage:main
     openstack-rally = rally.cmd.main:deprecated
     openstack-rally-manage = rally.cmd.manage:deprecated
-
 
 [global]
 setup-hooks =
