--- a/requirements.txt
+++ b/requirements.txt
@@ -7,7 +7,7 @@ netaddr>=0.7.6
 oslo.config>=1.2.0
 paramiko>=1.9.0
 pbr>=0.6,<1.0
-Mako>=0.4.0
+pecan>=0.4.5
 PrettyTable>=0.7,<0.8
 PyYAML>=3.1.0
 python-glanceclient>=0.9.0
@@ -20,3 +20,4 @@ python-ceilometerclient>=1.0.6
 requests>=1.1
 SQLAlchemy>=0.7.8,<=0.8.99
 six>=1.5.2
+WSME>=0.6
