Call rally-manage with warning when openstack-rally-manage is used
Currently when openstack-rally-manage is used, args are passed through
to rally, not rally-manage. This patch fixes this situation.

Change-Id: I51fe14068f679d7f65fb4e518b8f55beca1c7d72
Closes-Bug: #1274068

--- a/setup.cfg
+++ b/setup.cfg
@@ -26,7 +26,7 @@ console_scripts =
     rally = rally.cmd.main:main
     rally-manage = rally.cmd.manage:main
     openstack-rally = rally.cmd.main:deprecated
-    openstack-rally-manage = rally.cmd.main:deprecated
+    openstack-rally-manage = rally.cmd.manage:deprecated
 
 
 [global]
