Rally & Tempest integration (base) - part 1
Use tempest (https://github.com/openstack/tempest) inside rally to
organize base for verification functionality & for benchmarks scenario
based on tempest.

This patch adds ability to install Tempest tests (no parameters needs)
and to verify the specified cloud (takes a deploy_id as parameter, this
parameter is now optional). For now, there are smoke tests.

Usage:
rally-manage tempest install - install tempest tests
rally verify start --deploy-id=<deploy_id> - start cloud verification

Change-Id: I70bb37476dd2d12370ea77156adab3ceaddb93cb
Related: blueprint tempest-verification

--- a/tox.ini
+++ b/tox.ini
@@ -32,7 +32,7 @@ downloadcache = ~/cache/pip
 ignore = E126,H703
 show-source = true
 builtins = _
-exclude=.venv,.git,.tox,dist,doc,*lib/python*,*egg,tools
+exclude=.venv,.git,.tox,dist,doc,*lib/python*,*egg,tools,*rally/verification/verifiers/tempest/openstack-tempest*
 
 [hacking]
 import_exceptions = rally.openstack.common.gettextutils._
