Fix rally benchmark's timeout mechanism
Under big load OpenStack cloud sometimes stops
responding and python clients start waiting forever,
as they are using httplib multiprocessing.Pool is not able to
kill thread with this request => benchmark is never ended..

To resolve this we should set for all opentstack python clients
timeout.

We chose for default value 30 seconds, but it could be setted
via rally.conf.

Change-Id: Ideb45c91c4e3130d11e7afb6e912af699eee91e2
Closes-Bug: #1277855

--- a/etc/rally/rally.conf.sample
+++ b/etc/rally/rally.conf.sample
@@ -110,6 +110,8 @@
 # syslog facility to receive log lines (string value)
 #syslog_log_facility=LOG_USER
 
+#HTTP timeout for any of OpenStack service in seconds
+#openstack_client_http_timeout=30.0
 
 [database]
 
