--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ netaddr>=0.7.6
 oslo.config>=1.2.0
 paramiko>=1.9.0
 pbr>=0.6,<1.0
+Mako>=0.4.0
 PrettyTable>=0.7,<0.8
 python-glanceclient>=0.9.0
 python-keystoneclient>=0.6.0
