--- a/requirements.txt
+++ b/requirements.txt
@@ -15,6 +15,7 @@ python-novaclient>=2.15.0
 python-neutronclient>=2.3.4,<3
 python-cinderclient>=1.0.6
 python-heatclient>=0.2.3
+python-ceilometerclient>=1.0.6
 requests>=1.1
 SQLAlchemy>=0.7.8,<=0.8.99
 six>=1.4.1
