--- a/rally/verification/verifiers/tempest/config.ini
+++ b/rally/verification/verifiers/tempest/config.ini
@@ -42,6 +42,7 @@ username = %(username)s
 admin_password = %(password)s
 tenant_name = %(tenant_name)s
 uri = %(uri)s
+uri_v3 = %(uri_v3)s
 
 [network]
 default_network = 10.0.0.0/24
