--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,7 @@ paramiko>=1.9.0
 pbr>=0.6,<1.0
 Mako>=0.4.0
 PrettyTable>=0.7,<0.8
+PyYAML>=3.1.0
 python-glanceclient>=0.9.0
 python-keystoneclient>=0.6.0
 python-novaclient>=2.15.0
