--- a/doc/samples/tasks/glance/create-image-and-boot-instances.yaml
+++ b/doc/samples/tasks/glance/create-image-and-boot-instances.yaml
@@ -2,7 +2,7 @@
   GlanceImages.create_image_and_boot_instances:
     -
       args:
-        image_url: "http://download.cirros-cloud.net/0.3.1/cirros-0.3.1-x86_64-disk.img"
+        image_location: "http://download.cirros-cloud.net/0.3.1/cirros-0.3.1-x86_64-disk.img"
         container_format: "bare"
         disk_format: "qcow2"
         flavor_id: 42
