Split ContinuousScenarioRunner to constant and constant duration
* When 'type' in scenario config is 'constant', then
  use ConstantScenarioRunner.
* When 'type' in scenario config is 'constant_for_duration',
  then use ConstantForDurationScenarioRunner.
* Sample task configs renamed from 'continuous' to 'constant'.
* Renamed continous.py to constant.py.
* Error to specify 'continuous' for 'type' in scenario config.
* Error to specify 'times' and 'duration' in same config.
* Error to omit 'type' from scenario config.
* Error to omit 'duration' when 'type' is constant_for_duration.
* Improved unit tests to include timeout failure mode cases.

bp benchmark-split-continuous-runner
Change-Id: Idb83f5be538bce5740c7cb6211364caaf2d53b7d

--- a/doc/samples/tasks/authenticate/keystone.yaml
+++ b/doc/samples/tasks/authenticate/keystone.yaml
@@ -2,7 +2,7 @@
   Authenticate.keystone:
     -
       runner:
-        type: "continuous"
+        type: "constant"
         times: 100
         active_users: 5
       context:
