--- a/doc/samples/tasks/large-ops/create-volume-large-scale.yaml
+++ b/doc/samples/tasks/large-ops/create-volume-large-scale.yaml
@@ -4,7 +4,7 @@
       args:
         size: 1
       runner:
-        type: "continuous"
+        type: "constant"
         times: 30
         active_users: 5
       context:
