--- a/doc/samples/tasks/nova/boot-and-list.yaml
+++ b/doc/samples/tasks/nova/boot-and-list.yaml
@@ -6,7 +6,7 @@
         image_id: "ccc8fe37-9289-437b-a88c-fc4678656c75"
         detailed: True
       runner:
-        type: "continuous"
+        type: "constant"
         times: 1
         active_users: 1
       context:
