--- a/doc/samples/tasks/nova/boot-bounce-delete.yaml
+++ b/doc/samples/tasks/nova/boot-bounce-delete.yaml
@@ -14,7 +14,7 @@
           -
             rescue_unrescue: 1
       runner:
-        type: "continuous"
+        type: "constant"
         times: 10
         active_users: 2
       context:
