--- a/doc/samples/tasks/keystone/create-and-delete-user.yaml
+++ b/doc/samples/tasks/keystone/create-and-delete-user.yaml
@@ -4,6 +4,6 @@
       args:
         name_length: 10
       runner:
-        type: "continuous"
+        type: "constant"
         times: 100
         active_users: 10
