--- a/doc/samples/tasks/keystone/create-tenant-with-users.yaml
+++ b/doc/samples/tasks/keystone/create-tenant-with-users.yaml
@@ -5,6 +5,6 @@
         name_length: 10
         users_per_tenant: 10
       runner:
-        type: "continuous"
+        type: "constant"
         times: 10
         active_users: 10
