--- a/doc/samples/tasks/nova/boot-and-delete.yaml
+++ b/doc/samples/tasks/nova/boot-and-delete.yaml
@@ -5,7 +5,7 @@
         flavor_id: 1
         image_id: "73257560-c59b-4275-a1ec-ab140e5b9979"
       runner:
-        type: "continuous"
+        type: "constant"
         times: 10
         active_users: 2
       context:
