Sync modules from oslo, excluding db related
The following modules are updated:
cliutils,gettextutils,importutils,log,test,fixture,config

The following modules are new:
uuidutils

Other chnages:
 * Added uuidutils to openstack-common.conf
 * excluded rally/openstack* from pep8 check in tox.ini

Change-Id: I46fd3dc2e04bb9b5b74721a47689b860a9c68bdb

--- a/openstack-common.conf
+++ b/openstack-common.conf
@@ -10,6 +10,7 @@ module=importutils
 module=log
 module=test
 module=fixture
+module=uuidutils
 
 # The base module to hold the copy of openstack.common
 base=rally
