--- a/etc/rally/rally.conf.sample
+++ b/etc/rally/rally.conf.sample
@@ -45,29 +45,29 @@
 # Log output to standard error (boolean value)
 #use_stderr=true
 
-# format string to use for log messages with context (string
+# Format string to use for log messages with context (string
 # value)
-#logging_context_format_string=%(asctime)s.%(msecs)03d %(process)d %(levelname)s %(name)s [%(request_id)s %(user)s %(tenant)s] %(instance)s%(message)s
+#logging_context_format_string=%(asctime)s.%(msecs)03d %(process)d %(levelname)s %(name)s [%(request_id)s %(user_identity)s] %(instance)s%(message)s
 
-# format string to use for log messages without context
+# Format string to use for log messages without context
 # (string value)
 #logging_default_format_string=%(asctime)s.%(msecs)03d %(process)d %(levelname)s %(name)s [-] %(instance)s%(message)s
 
-# data to append to log format when level is DEBUG (string
+# Data to append to log format when level is DEBUG (string
 # value)
 #logging_debug_format_suffix=%(funcName)s %(pathname)s:%(lineno)d
 
-# prefix each line of exception output with this format
+# Prefix each line of exception output with this format
 # (string value)
 #logging_exception_prefix=%(asctime)s.%(msecs)03d %(process)d TRACE %(name)s %(instance)s
 
-# list of logger=LEVEL pairs (list value)
-#default_log_levels=amqplib=WARN,sqlalchemy=WARN,boto=WARN,suds=INFO,keystone=INFO,eventlet.wsgi.server=WARN
+# List of logger=LEVEL pairs (list value)
+#default_log_levels=amqp=WARN,amqplib=WARN,boto=WARN,qpid=WARN,sqlalchemy=WARN,suds=INFO,oslo.messaging=INFO,iso8601=WARN,requests.packages.urllib3.connectionpool=WARN
 
-# publish error events (boolean value)
+# Publish error events (boolean value)
 #publish_errors=false
 
-# make deprecations fatal (boolean value)
+# Make deprecations fatal (boolean value)
 #fatal_deprecations=false
 
 # If an instance is passed with the log message, format it
@@ -78,12 +78,13 @@
 # it like this (string value)
 #instance_uuid_format="[instance: %(uuid)s] "
 
-# If this option is specified, the logging configuration file
-# specified is used and overrides any other logging options
-# specified. Please see the Python logging module
-# documentation for details on logging configuration files.
-# (string value)
-#log_config=<None>
+# The name of logging configuration file. It does not disable
+# existing loggers, but just appends specified logging
+# configuration to any other existing logging options. Please
+# see the Python logging module documentation for details on
+# logging configuration files. (string value)
+# Deprecated group/name - [DEFAULT]/log_config
+#log_config_append=<None>
 
 # DEPRECATED. A logging.Formatter log message format string
 # which may use any of the available logging.LogRecord
@@ -98,29 +99,28 @@
 
 # (Optional) Name of log file to output to. If no default is
 # set, logging will go to stdout. (string value)
+# Deprecated group/name - [DEFAULT]/logfile
 #log_file=<None>
 
 # (Optional) The base directory used for relative --log-file
 # paths (string value)
+# Deprecated group/name - [DEFAULT]/logdir
 #log_dir=<None>
 
-# Use syslog for logging. (boolean value)
+# Use syslog for logging. Existing syslog format is DEPRECATED
+# during I, and then will be changed in J to honor RFC5424
+# (boolean value)
 #use_syslog=false
 
-# syslog facility to receive log lines (string value)
+# (Optional) Use syslog rfc5424 format for logging. If
+# enabled, will add APP-NAME (RFC5424) before the MSG part of
+# the syslog message.  The old format without APP-NAME is
+# deprecated in I, and will be removed in J. (boolean value)
+#use_syslog_rfc_format=false
+
+# Syslog facility to receive log lines (string value)
 #syslog_log_facility=LOG_USER
 
-# HTTP timeout for any of OpenStack service in seconds
-#openstack_client_http_timeout=30.0
-
-# Use SSL for all OpenStack API interfaces (boolean value)
-# Explicitly allows to perform "insecure" SSL (https) requests
-# The server's certificate will not be verified against any certificate
-# authorities. This option should be used with caution.
-#https_insecure=false
-
-# Path to CA server cetrificate for SSL (string value)
-#https_cacert=
 
 [api]
 
@@ -135,6 +135,163 @@
 #host=0.0.0.0
 
 
+[benchmark]
+
+#
+# Options defined in rally.benchmark.scenarios.cinder.utils
+#
+
+# Time to sleep after creating a resource before polling for
+# it status (floating point value)
+#cinder_volume_create_prepoll_delay=2.0
+
+# Time to wait for cinder volume to be created. (floating
+# point value)
+#cinder_volume_create_timeout=600.0
+
+# Interval between checks when waiting for volume creation.
+# (floating point value)
+#cinder_volume_create_poll_interval=2.0
+
+# Time to wait for cinder volume to be deleted. (floating
+# point value)
+#cinder_volume_delete_timeout=600.0
+
+# Interval between checks when waiting for volume deletion.
+# (floating point value)
+#cinder_volume_delete_poll_interval=2.0
+
+
+#
+# Options defined in rally.benchmark.scenarios.glance.utils
+#
+
+# Time to sleep after creating a resource before polling for
+# it status (floating point value)
+#glance_image_create_prepoll_delay=2.0
+
+# Time to wait for glance image to be created. (floating point
+# value)
+#glance_image_create_timeout=120.0
+
+# Interval between checks when waiting for image creation.
+# (floating point value)
+#glance_image_create_poll_interval=1.0
+
+# Time to wait for glance image to be deleted. (floating point
+# value)
+#glance_image_delete_timeout=120.0
+
+# Interval between checks when waiting for image deletion.
+# (floating point value)
+#glance_image_delete_poll_interval=1.0
+
+
+#
+# Options defined in rally.benchmark.scenarios.nova.utils
+#
+
+# Time to sleep after start before polling for status
+# (floating point value)
+#nova_server_start_prepoll_delay=0.0
+
+# Server start timeout (floating point value)
+#nova_server_start_timeout=300.0
+
+# Server start poll interval (floating point value)
+#nova_server_start_poll_interval=1.0
+
+# Time to sleep after stop before polling for status (floating
+# point value)
+#nova_server_stop_prepoll_delay=0.0
+
+# Server stop timeout (floating point value)
+#nova_server_stop_timeout=300.0
+
+# Server stop poll interval (floating point value)
+#nova_server_stop_poll_interval=2.0
+
+# Time to sleep after boot before polling for status (floating
+# point value)
+#nova_server_boot_prepoll_delay=1.0
+
+# Server boot timeout (floating point value)
+#nova_server_boot_timeout=300.0
+
+# Server boot poll interval (floating point value)
+#nova_server_boot_poll_interval=1.0
+
+# Time to sleep after delete before polling for status
+# (floating point value)
+#nova_server_delete_prepoll_delay=2.0
+
+# Server delete timeout (floating point value)
+#nova_server_delete_timeout=300.0
+
+# Server delete poll interval (floating point value)
+#nova_server_delete_poll_interval=2.0
+
+# Time to sleep after reboot before polling for status
+# (floating point value)
+#nova_server_reboot_prepoll_delay=2.0
+
+# Server reboot timeout (floating point value)
+#nova_server_reboot_timeout=300.0
+
+# Server reboot poll interval (floating point value)
+#nova_server_reboot_poll_interval=2.0
+
+# Time to sleep after rescue before polling for status
+# (floating point value)
+#nova_server_rescue_prepoll_delay=2.0
+
+# Server rescue timeout (floating point value)
+#nova_server_rescue_timeout=300.0
+
+# Server rescue poll interval (floating point value)
+#nova_server_rescue_poll_interval=2.0
+
+# Time to sleep after unrescue before polling for status
+# (floating point value)
+#nova_server_unrescue_prepoll_delay=2.0
+
+# Server unrescue timeout (floating point value)
+#nova_server_unrescue_timeout=300.0
+
+# Server unrescue poll interval (floating point value)
+#nova_server_unrescue_poll_interval=2.0
+
+# Time to sleep after suspend before polling for status
+# (floating point value)
+#nova_server_suspend_prepoll_delay=2.0
+
+# Server suspend timeout (floating point value)
+#nova_server_suspend_timeout=300.0
+
+# Server suspend poll interval (floating point value)
+#nova_server_suspend_poll_interval=2.0
+
+# Time to sleep after image_create before polling for status
+# (floating point value)
+#nova_server_image_create_prepoll_delay=0.0
+
+# Server image_create timeout (floating point value)
+#nova_server_image_create_timeout=300.0
+
+# Server image_create poll interval (floating point value)
+#nova_server_image_create_poll_interval=2.0
+
+# Time to sleep after image_delete before polling for status
+# (floating point value)
+#nova_server_image_delete_prepoll_delay=0.0
+
+# Server image_delete timeout (floating point value)
+#nova_server_image_delete_timeout=300.0
+
+# Server image_delete poll interval (floating point value)
+#nova_server_image_delete_poll_interval=2.0
+
+
 [database]
 
 #
@@ -142,11 +299,8 @@
 #
 
 # The backend to use for db (string value)
+# Deprecated group/name - [DEFAULT]/db_backend
 #backend=sqlalchemy
-
-# Enable the experimental use of thread pooling for all DB API
-# calls (boolean value)
-#use_tpool=false
 
 
 #
@@ -155,6 +309,9 @@
 
 # The SQLAlchemy connection string used to connect to the
 # database (string value)
+# Deprecated group/name - [DEFAULT]/sql_connection
+# Deprecated group/name - [DATABASE]/sql_connection
+# Deprecated group/name - [sql]/connection
 #connection=sqlite:////rally/openstack/common/db/$sqlite_db
 
 # The SQLAlchemy connection string used to connect to the
@@ -163,78 +320,65 @@
 
 # timeout before idle sql connections are reaped (integer
 # value)
+# Deprecated group/name - [DEFAULT]/sql_idle_timeout
+# Deprecated group/name - [DATABASE]/sql_idle_timeout
+# Deprecated group/name - [sql]/idle_timeout
 #idle_timeout=3600
 
 # Minimum number of SQL connections to keep open in a pool
 # (integer value)
+# Deprecated group/name - [DEFAULT]/sql_min_pool_size
+# Deprecated group/name - [DATABASE]/sql_min_pool_size
 #min_pool_size=1
 
 # Maximum number of SQL connections to keep open in a pool
 # (integer value)
+# Deprecated group/name - [DEFAULT]/sql_max_pool_size
+# Deprecated group/name - [DATABASE]/sql_max_pool_size
 #max_pool_size=<None>
 
 # maximum db connection retries during startup. (setting -1
 # implies an infinite retry count) (integer value)
+# Deprecated group/name - [DEFAULT]/sql_max_retries
+# Deprecated group/name - [DATABASE]/sql_max_retries
 #max_retries=10
 
 # interval between retries of opening a sql connection
 # (integer value)
+# Deprecated group/name - [DEFAULT]/sql_retry_interval
+# Deprecated group/name - [DATABASE]/reconnect_interval
 #retry_interval=10
 
 # If set, use this value for max_overflow with sqlalchemy
 # (integer value)
+# Deprecated group/name - [DEFAULT]/sql_max_overflow
+# Deprecated group/name - [DATABASE]/sqlalchemy_max_overflow
 #max_overflow=<None>
 
 # Verbosity of SQL debugging information. 0=None,
 # 100=Everything (integer value)
+# Deprecated group/name - [DEFAULT]/sql_connection_debug
 #connection_debug=0
 
 # Add python stack traces to SQL as comment strings (boolean
 # value)
+# Deprecated group/name - [DEFAULT]/sql_connection_trace
 #connection_trace=false
 
 # If set, use this value for pool_timeout with sqlalchemy
 # (integer value)
+# Deprecated group/name - [DATABASE]/sqlalchemy_pool_timeout
 #pool_timeout=<None>
 
-[benchmark]
-# These values set how long rally will wait before polling a resource when
-# waiting for a status change.
-#nova_server_boot_prepoll_delay=1
-#nova_server_delete_prepoll_delay=2
-#nova_server_reboot_prepoll_delay=2
-#nova_server_rescue_prepoll_delay=2
-#nova_server_unrescue_prepoll_delay=2
-#nova_server_suspend_prepoll_delay=2
 
-# These values set how long rally will wait for a resource to change status
-#nova_server_start_timeout=300
-#nova_server_stop_timeout=300
-#nova_server_boot_timeout=300
-#nova_server_delete_timeout=300
-#nova_server_reboot_timeout=300
-#nova_server_rescue_timeout=300
-#nova_server_unrescue_timeout=300
-#nova_server_suspend_timeout=300
-#nova_server_image_create_timeout=300
-#nova_server_image_delete_timeout=300
+[users_context]
 
-# These values set how frequently rally will poll a resource when waiting for
-# a status change.
-#nova_server_start_poll_interval=1
-#nova_server_stop_poll_interval=2
-#nova_server_boot_poll_interval=1
-#nova_server_delete_poll_interval=2
-#nova_server_reboot_poll_interval=2
-#nova_server_rescue_poll_interval=2
-#nova_server_unrescue_poll_interval=2
-#nova_server_suspend_poll_interval=2
-#nova_server_image_create_poll_interval=2
-#nova_server_image_delete_poll_interval=2
+#
+# Options defined in rally.benchmark.context.users
+#
 
-# Cinder options follow the same format as nova options above.
-#cinder_volume_create_prepoll_delay=2
-#cinder_volume_create_timeout=300
-#cinder_volume_create_poll_interval=2
-#cinder_volume_delete_timeout=300
-#cinder_volume_delete_poll_interval=2
+# How many concurrent threads use for serving users context
+# (integer value)
+#concurrent=1
+
+
