--- a/doc/samples/tasks/vm/boot-runcommand-delete.yaml
+++ b/doc/samples/tasks/vm/boot-runcommand-delete.yaml
@@ -1,12 +1,13 @@
 ---
-  NovaServers.boot_runcommand_delete_server:
+  VMTasks.boot_runcommand_delete:
     -
       args:
         flavor_id: "1"
-        image_id: "73257560-c59b-4275-a1ec-ab140e5b9979"
+        image_id: "231bdb41-f959-4496-a272-3ef9f6d9f790"
         script: "doc/samples/support/instance_dd_test.sh"
         interpreter: "/bin/sh"
         username: "ubuntu"
+        port: "22"
       runner:
         type: "constant"
         times: 10
