Add command-line integrated tests
Change-Id: I75b4efa104cb1991a439a891c2135af286d2283f
Related: blueprint rally-gate-jobs

--- a/tox.ini
+++ b/tox.ini
@@ -22,6 +22,9 @@ distribute = false
 [testenv:venv]
 commands = {posargs}
 
+[testenv:cli]
+commands = python -m unittest tests_ci.test_cli
+
 [testenv:cover]
 commands = python setup.py testr --coverage --testr-args='{posargs}'
 
