pass id or name of resources in scenario config
* added types.set(...) decorator to apply transform to scenario args
* abstract ResourceType implements generic transform logic
* support use of flavor name through FlavorResourceType
* support use of image name through ImageResourceType
* transform is applied during validation and during preprocessing
  which follows validation
* modified all sample scenarios to use flavor-by-name and
  image-by-name
* passing resource as simple key-value pair will no longer work,
  and instead resource must be object containig id, name, or regex
* unit tests for image and flavor transformations

Change-Id: If35959ece8f247b5376f5ff91ae3d3e008a84447

--- a/doc/samples/tasks/nova/boot-and-delete.yaml
+++ b/doc/samples/tasks/nova/boot-and-delete.yaml
@@ -2,8 +2,10 @@
   NovaServers.boot_and_delete_server:
     -
       args:
-        flavor_id: 1
-        image_id: "73257560-c59b-4275-a1ec-ab140e5b9979"
+        flavor:
+            name: "m1.nano"
+        image:
+            name: "cirros-0.3.1-x86_64-uec"
       runner:
         type: "constant"
         times: 10
