--- a/doc/samples/tasks/nova/boot-and-list.yaml
+++ b/doc/samples/tasks/nova/boot-and-list.yaml
@@ -2,8 +2,10 @@
   NovaServers.boot_and_list_server:
     -
       args:
-        flavor_id: 1
-        image_id: "ccc8fe37-9289-437b-a88c-fc4678656c75"
+        flavor:
+            name: "m1.nano"
+        image:
+            name: "cirros-0.3.1-x86_64-uec"
         detailed: True
       runner:
         type: "constant"
