Improve tempest.conf generation
Class TempestConf is added that generates tempest configuration file
for specific OpenStack deployment.

Co-Authored-By: Alexander Maretskiy <amaretskiy@mirantis.com>

blueprint tempest-improve-autoconfig

Change-Id: Id0a33998f99820f8a108305eea14b9bb9918c102

--- a/etc/rally/rally.conf.sample
+++ b/etc/rally/rally.conf.sample
@@ -383,6 +383,19 @@
 #db_max_retries=20
 
 
+[image]
+
+#
+# Options defined in rally.verification.verifiers.tempest.config
+#
+
+# Version of cirros image
+#cirros_version=0.3.2
+
+# Cirros image name
+#cirros_image=cirros-0.3.2-x86_64-disk.img
+
+
 [users_context]
 
 #
