--- a/rally/verification/verifiers/tempest/config.ini
+++ b/rally/verification/verifiers/tempest/config.ini
@@ -9,6 +9,7 @@ instance_type = m1.nano
 http_socket_timeout = 30
 build_interval = 1
 build_timeout = 196
+http_socket_timeout = 30
 
 [cli]
 cli_dir = /usr/local/bin
@@ -28,6 +29,10 @@ change_password_available = False
 build_interval = 1
 build_timeout = 196
 
+[compute-admin]
+
+[identity]
+
 [network]
 default_network = 10.0.0.0/24
 tenant_networks_reachable = false
@@ -35,23 +40,12 @@ api_version = 2.0
 
 [network-feature-enabled]
 api_extensions = all
+ipv6 = True
 
 [scenario]
 large_ops_number = 0
 
 [service_available]
-marconi = False
-trove = False
-savanna = False
-ironic = False
-ceilometer = False
-horizon = True
-heat = True
-swift = False
-neutron = True
-glance = True
-cinder = True
-nova = True
 
 [volume]
 build_interval = 1
