--- a/requirements.txt
+++ b/requirements.txt
@@ -17,6 +17,7 @@ python-neutronclient>=2.3.4,<3
 python-cinderclient>=1.0.6
 python-heatclient>=0.2.3
 python-ceilometerclient>=1.0.6
+python-ironicclient
 requests>=1.1
 SQLAlchemy>=0.7.8,<=0.9.99
 six>=1.6.0
