Heat rally scenario tests
This patch contains next main changes:
 - two scenarios for heat project ("create_and_list_stack",
   "create_and_delete_stack").
 - three atomic action for heat project ("stack-list" , "stack-create",
   "stack-delete").
 - two task samples how to use new scenarios.
 - a little changes in utils for supporting heat stack_status property.

Change-Id: Ice2bd4dc2fcefb7351df69dd8463abc6f8d4fd24

--- a/rally-scenarios/rally.yaml
+++ b/rally-scenarios/rally.yaml
@@ -207,3 +207,25 @@
         type: "constant"
         times: 10
         concurrency: 10
+
+  HeatStacks.create_and_list_stack:
+    -
+      runner:
+        type: "constant"
+        times: 10
+        concurrency: 1
+      context:
+        users:
+          tenants: 1
+          users_per_tenant: 1
+
+  HeatStacks.create_and_delete_stack:
+    -
+      runner:
+        type: "constant"
+        times: 10
+        concurrency: 2
+      context:
+        users:
+          tenants: 2
+          users_per_tenant: 3
