Add nova floating ip management in VM scenario
This patch allows VM runcommand scenario attach a floating ip
to the instance to perform ssh connection.

Blueprint: benchmark-scenarios-vm-floating-ip

Change-Id: I2e77d6be34a64d5feb9d3ecc5e35c8a712b10bed

--- a/rally-scenarios/rally-neutron.yaml
+++ b/rally-scenarios/rally-neutron.yaml
@@ -102,6 +102,24 @@
         type: "constant"
         times: 100
         concurrency: 10
+
+  VMTasks.boot_runcommand_delete:
+    -
+      args:
+        flavor:
+          name: "m1.tiny"
+        image:
+          name: "cirros-0.3.2-x86_64-uec"
+        fixed_network: "private"
+        floating_network: "public"
+        use_floatingip: true
+        script: "/home/jenkins/.rally/extra/instance_dd_test.sh"
+        interpreter: "/bin/sh"
+        username: "cirros"
+      runner:
+        type: "constant"
+        times: 6
+        concurrency: 3
       context:
         users:
           tenants: 1
