--- a/doc/samples/tasks/cinder/create-and-list-volume.yaml
+++ b/doc/samples/tasks/cinder/create-and-list-volume.yaml
@@ -7,7 +7,7 @@
       runner:
         type: "constant"
         times: 3
-        active_users: 1
+        concurrency: 1
       context:
         users:
           tenants: 1
