--- a/doc/samples/tasks/cinder/create-volume.yaml
+++ b/doc/samples/tasks/cinder/create-volume.yaml
@@ -6,7 +6,7 @@
       runner:
         type: "constant"
         times: 3
-        active_users: 2
+        concurrency: 2
       context:
         users:
           tenants: 2
