--- a/doc/samples/tasks/glance/create-and-list-image.yaml
+++ b/doc/samples/tasks/glance/create-and-list-image.yaml
@@ -8,7 +8,7 @@
       runner:
         type: "constant"
         times: 10
-        active_users: 1
+        concurrency: 1
       context:
         users:
           tenants: 1
