--- a/doc/samples/tasks/large-ops/create-volume-large-scale.yaml
+++ b/doc/samples/tasks/large-ops/create-volume-large-scale.yaml
@@ -6,7 +6,7 @@
       runner:
         type: "constant"
         times: 30
-        active_users: 5
+        concurrency: 5
       context:
         users:
           tenants: 1
