--- a/doc/samples/tasks/nova/boot-bounce-delete.yaml
+++ b/doc/samples/tasks/nova/boot-bounce-delete.yaml
@@ -16,7 +16,7 @@
       runner:
         type: "constant"
         times: 10
-        active_users: 2
+        concurrency: 2
       context:
         users:
           tenants: 3
