--- a/doc/samples/tasks/nova/boot-snapshot-boot-delete.yaml
+++ b/doc/samples/tasks/nova/boot-snapshot-boot-delete.yaml
@@ -7,7 +7,7 @@
       runner:
         type: "constant"
         times: 10
-        active_users: 2
+        concurrency: 2
       context:
         users:
           tenants: 3
