--- a/doc/samples/tasks/neutron/create_and_list_networks.yaml
+++ b/doc/samples/tasks/neutron/create_and_list_networks.yaml
@@ -1,6 +1,8 @@
 ---
   NeutronNetworks.create_and_list_networks:
     -
+      args:
+        network_data:
       runner:
         type: "constant"
         times: 100
