Add probabliity based dummy exception scenario
This secnario will throw an exception with the probability provided.
Useful for testing where some good iterations and some bad iterations
are required.

Also adds:
  * number validator to dummy_exception scenario.
  * more itterations to dummy scenario sample files

Change-Id: I50360de0347a8c28686a3196edefe3ae004fce85

--- a/rally-scenarios/rally.yaml
+++ b/rally-scenarios/rally.yaml
@@ -83,3 +83,42 @@
         type: "constant"
         times: 10
         concurrency: 10
+
+  Dummy.dummy:
+    -
+      args:
+        sleep: 5
+      runner:
+        type: "constant"
+        times: 20
+        concurrency: 5
+      context:
+        users:
+          tenants: 1
+          users_per_tenant: 1
+
+  Dummy.dummy_exception:
+    -
+      args:
+        size_of_message: 5
+      runner:
+        type: "constant"
+        times: 20
+        concurrency: 5
+      context:
+        users:
+          tenants: 1
+          users_per_tenant: 1
+
+  Dummy.dummy_exception_probability:
+    -
+      args:
+        exception_probability: 0.5
+      runner:
+        type: "constant"
+        times: 100
+        concurrency: 1
+      context:
+        users:
+          tenants: 1
+          users_per_tenant: 1
