Add Neutron benchmarks scenario for creating and listing routers
In this patch:
    * scenario NeutronNetworks.create_and_list_routers is added,
      which does the following:
        - creates networks, subnets, routers according to scenario file
        - adds routers interfaces to created subnets
        - lists routers
    * refactoring in NeutronNetworks class for PEP257
      and methods arguments
    * a piece of rafactoring in ResourceCleaner tests
    * classmethod NeutronScenario._generate_subnet_cidr is re-implemented
      for using netaddr.IPNetwork class
    * base implementation for class fakes.FakeNeutronClient
    * some improvements and refactoring for fakes

blueprint benchmark-scenarios-for-neutron

Change-Id: I6dbbe9e476cdf0f1fd4c7f1387e830b5a46e2aa6

--- a/doc/samples/tasks/neutron/create_and_list_networks.yaml
+++ b/doc/samples/tasks/neutron/create_and_list_networks.yaml
@@ -2,7 +2,7 @@
   NeutronNetworks.create_and_list_networks:
     -
       args:
-        network_data:
+        network_create_args:
       runner:
         type: "constant"
         times: 100
@@ -11,3 +11,6 @@
         users:
           tenants: 1
           users_per_tenant: 1
+        quotas:
+          neutron:
+            network: -1
