--- a/doc/samples/tasks/neutron/create_and_list_routers.yaml
+++ b/doc/samples/tasks/neutron/create_and_list_routers.yaml
@@ -1,11 +1,12 @@
 ---
-  NeutronNetworks.create_and_list_subnets:
+  NeutronNetworks.create_and_list_routers:
     -
       args:
         network_create_args:
         subnet_create_args:
         subnet_cidr_start: "1.1.0.0/30"
         subnets_per_network: 2
+        router_create_args:
       runner:
         type: "constant"
         times: 100
@@ -18,3 +19,4 @@
           neutron:
             network: -1
             subnet: -1
+            router: -1
