Add benchmark scenarios for ceilometer meters GET API
Change-Id: I868e444367180b6b4c51ce06b3b7c54d1fcbf5ec
blueprint: benchmark-scenarios-for-celiometer

--- a/rally-scenarios/rally.yaml
+++ b/rally-scenarios/rally.yaml
@@ -84,6 +84,13 @@
         times: 10
         concurrency: 10
 
+  CeilometerMeters.list_meters:
+    -
+      runner:
+        type: "constant"
+        times: 10
+        concurrency: 1
+
   Dummy.dummy:
     -
       args:
