Add benchmark scenarios for ceilometer resources GET API
Change-Id: I04b1d6383ec5e876ce67b9dd471fa0ff22f8fa58
blueprint: benchmark-scenarios-for-celiometer

--- a/rally-scenarios/rally.yaml
+++ b/rally-scenarios/rally.yaml
@@ -91,6 +91,13 @@
         times: 10
         concurrency: 1
 
+  CeilometerResource.list_resources:
+    -
+      runner:
+        type: "constant"
+        times: 10
+        concurrency: 10
+
   Dummy.dummy:
     -
       args:
