--- a/tox.ini
+++ b/tox.ini
@@ -28,6 +28,10 @@ commands = python -m unittest tests_ci.test_cli
 [testenv:cover]
 commands = python setup.py testr --coverage --testr-args='{posargs}'
 
+[testenv:doc]
+changedir = doc/source
+commands = make html
+
 [tox:jenkins]
 downloadcache = ~/cache/pip
 
