Use plugins from project in rally-gate
Plugins must be stored in $PROJECT/rally-scenarios/plugins/

Change-Id: I751216e69c11e8743d5256c4e8e5b1bfa193091e

--- a/rally-scenarios/rally.yaml
+++ b/rally-scenarios/rally.yaml
@@ -136,3 +136,10 @@
         users:
           tenants: 1
           users_per_tenant: 1
+
+  FakePlugin.testplugin:
+    -
+      runner:
+        type: "constant"
+        times: 4
+        concurrency: 2
