--- a/rally-scenarios/rally.yaml
+++ b/rally-scenarios/rally.yaml
@@ -143,3 +143,16 @@
         type: "constant"
         times: 4
         concurrency: 2
+
+  CeilometerStats.create_meter_and_get_stats:
+   -
+      args:
+        user_id: "user-id"
+        resource_id: "resource-id"
+        counter_volume: 1.0
+        counter_unit: ""
+        counter_type: "cumulative"
+      runner:
+        type: "constant"
+        times: 200
+        concurrency: 5
