--- a/rally-scenarios/rally.yaml
+++ b/rally-scenarios/rally.yaml
@@ -156,3 +156,54 @@
         type: "constant"
         times: 200
         concurrency: 5
+
+  CeilometerQueries.create_and_query_alarms:
+    -
+      args:
+        filter: {"and": [{"!=": {"state": "dummy_state"}},{"=": {"type": "threshold"}}]}
+        orderby: !!null
+        limit: 10
+        meter_name: "ram_util"
+        threshold: 10.0
+        type: "threshold"
+        statistic: "avg"
+        alarm_actions: ["http://localhost:8776/alarm"]
+        ok_actions: ["http://localhost:8776/ok"]
+        insufficient_data_actions: ["http://localhost:8776/notok"]
+      runner:
+        type: "constant"
+        times: 10
+        concurrency: 10
+
+  CeilometerQueries.create_and_query_alarm_history:
+    -
+      args:
+        orderby: !!null
+        limit: !!null
+        meter_name: "ram_util"
+        threshold: 10.0
+        type: "threshold"
+        statistic: "avg"
+        alarm_actions: ["http://localhost:8776/alarm"]
+        ok_actions: ["http://localhost:8776/ok"]
+        insufficient_data_actions: ["http://localhost:8776/notok"]
+      runner:
+        type: "constant"
+        times: 10
+        concurrency: 10
+
+  CeilometerQueries.create_and_query_samples:
+    -
+      args:
+        filter: {"=": {"counter_unit": "instance"}}
+        orderby: !!null
+        limit: 10
+        counter_name: "cpu_util"
+        counter_type: "gauge"
+        counter_unit: "instance"
+        counter_volume: 1.0
+        resource_id: "resource_id"
+      runner:
+        type: "constant"
+        times: 10
+        concurrency: 10
