Correct scenario specific results table headers
This patch allows to correct VM scenario command results displayed
when calling 'rally task detailed <uuid>' : command's result json
keys are now displayed.

Also add functional test to run in gates to check correct output.

Closes-Bug: #1328451

Change-Id: I7cf2a433e47779beba60c52d23825189e60f51a6

--- a/rally-scenarios/rally.yaml
+++ b/rally-scenarios/rally.yaml
@@ -137,6 +137,17 @@
           tenants: 1
           users_per_tenant: 1
 
+  Dummy.dummy_with_scenario_output:
+    -
+      runner:
+        type: "constant"
+        times: 20
+        concurrency: 10
+      context:
+        users:
+          tenants: 1
+          users_per_tenant: 1
+
   FakePlugin.testplugin:
     -
       runner:
